tests/snapshots/cli_tests__lemmy_metadata_check_counters_snapshot.snap
---
source: tests/cli_tests.rs
expression: counters
---
{
  "direct_optional_decls": 0,
  "matches": 0,
  "members": 41,
  "names": 704,
  "normal_edges": 2950,
  "packages": 833,
  "rules": 3,
  "superset_extra_edges": 400,
  "unrebased_path_deps": 0,
  "violations": 0
}
