tests/snapshots/cli_tests__ws_basic_json_report_snapshot.snap
---
source: tests/cli_tests.rs
expression: cleaned_stdout(&output)
---
{
  "tool": "cargo-depgate",
  "version": "0.1.0",
  "features": "default",
  "timings": {
    "read": "<MS>",
    "parse": "<MS>",
    "graph": "<MS>",
    "traversals": "<MS>",
    "evaluate": "<MS>",
    "manifest": "<MS>",
    "report": "<MS>",
    "total": "<MS>"
  },
  "counters": {
    "packages": 4,
    "members": 4,
    "normal_edges": 3,
    "names": 4,
    "superset_extra_edges": 0,
    "direct_optional_decls": 0,
    "unrebased_path_deps": 0,
    "rules": 8,
    "violations": 0,
    "matches": 0
  },
  "violations": []
}
